# miniSQL

./: CMakeLists.txt  README.md
database/: input.sql
src/: main.cpp
src/includes/: database.cpp  database.hpp  globals.cpp  globals.hpp  parser.cpp  parser.hpp  query.cpp  query.hpp  table.cpp  table.hpp
